[gd_scene load_steps=20 format=3 uid="uid://ncg1xr5s5mch"]

[ext_resource type="FontFile" uid="uid://bok1it5sq2e4t" path="res://Art/UI/retro-blocky.ttf" id="1_8fxym"]
[ext_resource type="Script" path="res://Scenes/options/options.gd" id="1_loeko"]
[ext_resource type="Texture2D" uid="uid://bgbvvnkllbswe" path="res://Art/UI/options/grabber_big.png" id="3_lprrn"]
[ext_resource type="Texture2D" uid="uid://bqi4wt78irwck" path="res://Art/UI/options/grabber.png" id="3_tyxoc"]
[ext_resource type="Texture2D" uid="uid://ctvg5s65rf3w3" path="res://Art/UI/options/okay_btn.png" id="5_y1ini"]
[ext_resource type="AudioStream" uid="uid://bq3cyf0al626c" path="res://Scenes/fishing/sfx/select.wav" id="6_wmpv7"]
[ext_resource type="Texture2D" uid="uid://dfw2dwyprmrmq" path="res://Art/UI/left_arrow.png" id="7_uv2g7"]
[ext_resource type="Texture2D" uid="uid://v5fq06ptaunq" path="res://Art/UI/buttons.png" id="8_bk5ug"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_wkf8a"]
color = Color(0.709804, 0.788235, 0.603922, 1)
grow_begin = 2.0
grow_end = 3.0
thickness = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8qq7l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lqru6"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_j35nu"]
texture = ExtResource("5_y1ini")
region_rect = Rect2(0, 0, 16, 16)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lxqpv"]
texture = ExtResource("5_y1ini")
region_rect = Rect2(16, 0, 16, 16)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_f42tu"]
texture = ExtResource("5_y1ini")
region_rect = Rect2(16, 0, 16, 16)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oy2wd"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_h6jcp"]
texture = ExtResource("7_uv2g7")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ayx0e"]
texture = ExtResource("8_bk5ug")
region_rect = Rect2(64, 0, 16, 16)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1rnrs"]
texture = ExtResource("8_bk5ug")
region_rect = Rect2(64, 0, 16, 16)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1lhrt"]

[node name="Options" type="Node2D"]
script = ExtResource("1_loeko")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 64.0
offset_bottom = 64.0
color = Color(0.443137, 0.513726, 0.333333, 1)

[node name="res_slider" type="HSlider" parent="."]
offset_left = 3.0
offset_top = 11.0
offset_right = 60.0
offset_bottom = 19.0
theme_override_constants/center_grabber = 1
theme_override_constants/grabber_offset = -1
theme_override_icons/grabber = ExtResource("3_lprrn")
theme_override_icons/grabber_highlight = ExtResource("3_lprrn")
theme_override_icons/grabber_disabled = ExtResource("3_lprrn")
theme_override_icons/tick = ExtResource("3_tyxoc")
theme_override_styles/slider = SubResource("StyleBoxLine_wkf8a")
theme_override_styles/grabber_area = SubResource("StyleBoxEmpty_8qq7l")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxEmpty_lqru6")
min_value = 1.0
max_value = 4.0
value = 3.0
tick_count = 4
ticks_on_borders = true

[node name="widow_size" type="Label" parent="."]
offset_left = 2.0
offset_top = 1.0
offset_right = 48.0
offset_bottom = 10.0
theme_override_colors/font_color = Color(0.913725, 0.960784, 0.858824, 1)
theme_override_fonts/font = ExtResource("1_8fxym")
theme_override_font_sizes/font_size = 5
text = "Window  Size:"

[node name="resolution_label" type="Label" parent="."]
offset_left = 2.0
offset_top = 19.0
offset_right = 62.0
offset_bottom = 28.0
theme_override_colors/font_color = Color(0.913725, 0.960784, 0.858824, 1)
theme_override_fonts/font = ExtResource("1_8fxym")
theme_override_font_sizes/font_size = 5
text = "800x800"

[node name="Button" type="Button" parent="."]
offset_left = 48.0
offset_top = 48.0
offset_right = 64.0
offset_bottom = 64.0
theme_override_styles/normal = SubResource("StyleBoxTexture_j35nu")
theme_override_styles/hover = SubResource("StyleBoxTexture_lxqpv")
theme_override_styles/pressed = SubResource("StyleBoxTexture_f42tu")
theme_override_styles/focus = SubResource("StyleBoxEmpty_oy2wd")

[node name="back_btn" type="Button" parent="."]
offset_top = 48.0
offset_right = 16.0
offset_bottom = 64.0
theme_override_styles/normal = SubResource("StyleBoxTexture_h6jcp")
theme_override_styles/hover = SubResource("StyleBoxTexture_ayx0e")
theme_override_styles/pressed = SubResource("StyleBoxTexture_1rnrs")
theme_override_styles/focus = SubResource("StyleBoxEmpty_1lhrt")

[node name="select_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_wmpv7")

[connection signal="drag_ended" from="res_slider" to="." method="_on_res_slider_drag_ended"]
[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="button_down" from="back_btn" to="." method="_on_back_btn_button_down"]
[connection signal="button_up" from="back_btn" to="." method="_on_back_btn_button_up"]
